# monotile

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-push
defaults/: autostart.sh  config.ron
protocols/: dwl-ipc-unstable-v2.xml  monotile-ipc-unstable-v1.xml
resources/: monotile.desktop
src/: config.rs  input.rs  lib.rs  main.rs  spawn.rs  state.rs
src/backend/: drm.rs  mod.rs  winit.rs
src/grabs/: mod.rs  move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  dmabuf.rs  foreign_toplevel.rs  idle_notifier.rs  layer_shell.rs  mod.rs  output_power.rs  screencopy.rs  session_lock.rs  xdg_shell.rs
src/ipc/: dwl_ipc.rs  dwl_ipc_protocol.rs  mod.rs  monotile_ipc.rs  monotile_ipc_protocol.rs
src/render/: border.rs  clipped_surface.rs  cursor.rs  mod.rs  window.rs
src/render/shaders/: border.frag  clipped_surface.frag  decoration.frag  mod.rs  rounded_rect.frag  shadow.frag
src/shell/: blocker.rs  layout.rs  mod.rs  monitor.rs  tag.rs  transition.rs  view.rs  window.rs
src/tests/: client.rs  fixture.rs  ipc_client_protocol.rs  mod.rs  monotile_ipc_client_protocol.rs  test_dnd.rs  test_dwl_ipc.rs  test_foreign_toplevel.rs  test_layer_shell.rs  test_layout.rs  test_monotile_ipc.rs  test_screencopy.rs  test_session_lock.rs  test_transitions.rs  test_views.rs  test_window_opening.rs  test_xdg_activation.rs
