[package]
name = "monotile"
version = "0.1.0"
edition = "2024"
authors = ["Alexander Koeck <alex@echocluster.net>"]
description = "A minimalist Wayland compositor in Rust inspired by dwm"
license = "GPL-3.0-or-later"
repository = "https://github.com/lx7/monotile"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
calloop = "0.14"
slotmap = "1.0"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
rev = "14a2009cd"
default-features = false
features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "renderer_glow",
]

[dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/smithay.git"
rev = "14a2009cd"

[dev-dependencies]
wayland-client = "0.31"
wayland-backend = "0.3"
wayland-protocols = { version = "0.32", features = ["client"] }
tempfile = "3.25.0"

[[bin]]
name = "monotile"
path = "src/main.rs"
