[package]
name = "monotile"
version = "0.2.0"
edition = "2024"
authors = ["Alexander Koeck <alex@echocluster.net>"]
description = "A small and light dynamig tiling Wayland compositor in Rust"
license = "GPL-3.0-or-later"
repository = "https://github.com/lx7/monotile"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1"
calloop = "0.14"
slotmap = "1.1"
xcursor = "0.3"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
dirs = "6"
inline_default = "1.2.0"
regex = "1"
derive_more = { version = "2", features = ["deref", "deref_mut"] }
wayland-scanner = "0.31"
wayland-server = "0.31"
wayland-backend = "0.3"
wayland-protocols-wlr = { version = "0.3", features = ["server"] }


[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
rev = "dba255cd1"
default-features = false
features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "renderer_glow",
]

[dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/smithay.git"
rev = "dba255cd1"

[dev-dependencies]
wayland-client = "0.31"
wayland-backend = "0.3"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
tempfile = "3.27.0"

[[bin]]
name = "monotile"
path = "src/main.rs"
